--- a/ECM2434/Ecolution/templates/events.html
+++ b/ECM2434/Ecolution/templates/events.html
@@ -3,12 +3,17 @@
 
 {% block title %}
     <title>Events - Ecolution</title>
+    <link rel="stylesheet" href="{% static 'styles.css' %}">
     <style>
 
         .event_details {
             display: none;
             position: fixed;
-            background-color: pink;
+            background-color: white;
+            width: 380px;
+            height: 600px;
+            border-radius: 15px 15px;
+            padding: 5px 20px;
         }
 
         .event_details .show{
@@ -16,14 +21,25 @@
         }
 
         .event {
-            background-color: white;
             margin: 5px;
+            padding: 15px;
+            
         }
 
         .exit_button {
-            background-color: white;
-            text-align: right;
-            width: auto;
+            margin-top: 10px;
+            color: white;
+            display: inline-block;
+            font-weight: bold;
+        }
+
+        .exit_button_container {
+            display: flex;
+            justify-content: end;
+        }
+
+        h1 {
+            text-align: center;
         }
 
     </style>
@@ -33,18 +49,13 @@
     <!-- Main Content -->
 
     <body>
-        <h1>My Events</h1>
+        <h1 class="text_light">Events</h1>
+        <h2 class="text_light">My Events</h2>
         <div>
             {% if user_events %}
                 {% for user_event in user_events%}
-                    <div class="event" onclick="openEvent()">
-                        <h2>{{user_event.event.event_name}}</h2>
-                        <p>{{user_event.event.description}}</p>
-                    </div>
-
-                    <div class="event_details" id="event_details">
-                        <p class="exit_button"; onclick="closeEvent()">x</p>
-                        <h1>{{user_event.event.event_name}}</h1>
+                    <div class="card box_shadow text_light event" onclick="openUserEvent('{{ user_event.event.event_name }}', '{{ user_event.event.description }}')">
+                        <h3>{{user_event.event.event_name}}</h3>
                         <p>{{user_event.event.description}}</p>
                     </div>
                 {% endfor %}
@@ -53,18 +64,12 @@
             {% endif %}
         </div>
 
-        <h1>Join Events</h1>
+        <h2 class="text_light">Join Events</h2>
         <div>
             {% if events %}
                 {% for event in events%}
-                    <div class="event" onclick="openEvent()">
-                        <h2>{{event.event_name}}</h2>
-                        <p>{{event.description}}</p>
-                    </div>
-
-                    <div class="event_details" id="event_details">
-                        <p class="exit_button"; onclick="closeEvent()">x</p>
-                        <h1>{{event.event_name}}</h1>
+                    <div class="card box_shadow text_light event" onclick="openEvent('{{ event.event_name }}', '{{ event.description }}')">
+                        <h3>{{event.event_name}}</h3>
                         <p>{{event.description}}</p>
                     </div>
                 {% endfor %}
@@ -72,18 +77,60 @@
                 <p>You have already joined all ongoing events</p>
             {% endif %}
         </div>
+
+        <div class="event_details margin_std" id="user_event_details">
+            <div class="button exit_button_container">
+                <button class="button exit_button" onclick="closeUserEvent()">x</button>
+            </div>
+            <h1 class="text_dark"></h1>
+            <p></p>
+        </div>
+
+        <div class="event_details margin_std" id="other_event_details">
+            <div class="button exit_button_container">
+                <button class="button exit_button" onclick="closeEvent()">x</button>
+            </div>
+            <h1 class="text_dark"></h1>
+            <p></p>
+            <button class="button text_light">Join Event</button>
+        </div>
     
     </body>
     
     
     <script>
     
-        function openEvent() {
-            document.getElementById("event_details").style.display = "block";
+        function openUserEvent(name, description) {
+            let eventDetails = document.getElementById("user_event_details");
+
+            eventDetails.innerHTML = `
+                <p class="button exit_button" onclick="closeUserEvent()">x</p>
+                <h1 class="text_dark">${name}</h1>
+                <p>${description}</p>
+            `;
+
+            eventDetails.style.display = "block";
+        }
+
+        function closeUserEvent() {
+            document.getElementById("user_event_details").style.display = "none";
+        }
+
+        function openEvent(name, description) {
+            let eventDetails = document.getElementById("other_event_details");
+
+            eventDetails.innerHTML = `
+                <p class="button exit_button" onclick="closeEvent()">x</p>
+                <h1 class="text_dark">${name}</h1>
+                <p>${description}</p>
+                <button class="button text_light">Join Event</button>
+            `;
+
+            eventDetails.style.display = "block";
         }
 
         function closeEvent() {
-            document.getElementById("event_details").style.display = "none";
+            document.getElementById("other_event_details").style.display = "none";
         }
     
     </script>
