--- a/ECM2434/Ecolution/templates/base.html
+++ b/ECM2434/Ecolution/templates/base.html
@@ -19,41 +19,43 @@
 </head>
 
 <body class="background">
-    <header>
-        {% block header %}
-            <!-- Default Header Content -->
-            <div class="flex_h margin_std">
-                <section class="button_settings">
-                    <button class="button_img flex_v flex_center box_shadow" type="button" onclick="toggleUseMenu()">
-                        <img src="{% static 'images/icon_button.png' %}" alt="Settings">
-                    </button>
-                    <section class="settings_menu" id="settingsMenu">
-                        <a href="{% url 'home' %}">Home</a>
-                        <a href="{% url 'tasks' %}">Tasks</a>
-                        <a href="{% url 'settings' %}">Settings</a>
+    <section class="content_wrapper">
+        <header>
+            {% block header %}
+                <!-- Default Header Content -->
+                <div class="flex_h margin_std">
+                    <section class="button_settings">
+                        <button class="button_img flex_v flex_center box_shadow" type="button" onclick="toggleUseMenu()">
+                            <img src="{% static 'images/icon_button.png' %}" alt="Settings">
+                        </button>
+                        <section class="settings_menu" id="settingsMenu">
+                            <a href="{% url 'home' %}">Home</a>
+                            <a href="{% url 'tasks' %}">Tasks</a>
+                            <a href="{% url 'settings' %}">Settings</a>
+                        </section>
                     </section>
-                </section>
-                <section class="currency_indicator">
-                    <div class="flex_h flex_h_fill flex_center">
-                        <h3 class="text_light">{{ points }}</h3>
-                        <img class="img_leaf" src="{% static 'images/leaf.png' %}" alt="Leaf">
-                    </div>
-                </section>
-            </div>
-
-            <script>
-                function toggleUseMenu() {
-                    var menu = document.getElementById("settingsMenu");
-                    menu.style.display = menu.style.display === "block" ? "none" : "block";
-                }
-            </script>
-        {% endblock %}
-    </header>
-    <main class="margin_std flex_v">
-        {% block main %}
-            <!-- Main Content -->
-        {% endblock %}
-    </main>
+                    <section class="currency_indicator">
+                        <div class="flex_h flex_h_fill flex_center">
+                            <h3 class="text_light">{{ points }}</h3>
+                            <img class="img_leaf" src="{% static 'images/leaf.png' %}" alt="Leaf">
+                        </div>
+                    </section>
+                </div>
+    
+                <script>
+                    function toggleUseMenu() {
+                        var menu = document.getElementById("settingsMenu");
+                        menu.style.display = menu.style.display === "block" ? "none" : "block";
+                    }
+                </script>
+            {% endblock %}
+        </header>
+        <main class="margin_std flex_v">
+            {% block main %}
+                <!-- Main Content -->
+            {% endblock %}
+        </main>
+    </section>
 
     {% block additional %}
         <!-- Any Additional Content (Scripts, etc.) -->
