--- a/ECM2434/Ecolution/templates/base.html
+++ b/ECM2434/Ecolution/templates/base.html
@@ -64,3 +64,16 @@
 </body>
 
 </html>
+
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        fetch("{% url 'get_fontsize' %}")
+            .then(response => response.json())
+            .then(data => {
+                if (data.preferred_fontsize) {
+                    document.documentElement.style.fontSize = `${data.preferred_fontsize * 2}px`;
+                }
+            })
+            .catch(error => console.error("Error fetching font size:", error));
+    });
+</script>
